--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cariyeplus",
+  "name": "cariyex",
   "version": "1.0.0",
   "description": "",
   "main": "src/main.js",
@@ -9,9 +9,9 @@
   "author": "Whattyu",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/builders": "^0.13.0",
-    "@discordjs/opus": "^0.7.0",
-    "@discordjs/voice": "^0.9.0",
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.11.0",
     "@gcommands/plugin-cooldowns": "^1.0.5",
     "@gcommands/plugin-language": "^1.0.5",
     "@gcommands/plugin-moreevents": "^1.0.3",
@@ -26,24 +26,28 @@
     "dbd-capriham-theme": "^1.7.34",
     "dbd-dark-dashboard": "^1.6.58",
     "discord-dashboard": "^2.3.33",
+    "discord-giveaways": "^5.2.2",
     "discord-image-generation": "^1.4.13",
     "discord-together": "^1.3.3",
     "discord-xp": "^1.1.16",
-    "discord.js": "^13.7.0",
+    "discord.js": "^13.9.0",
     "djs-rainbow": "^1.0.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^5.0.2",
     "figlet": "^1.5.2",
-    "gcommands": "^9.2.0",
+    "gcommands": "^9.3.0",
     "genius-lyrics": "^4.3.8",
     "giphy-api": "^2.0.2",
-    "google-it": "^1.6.2",
+    "google-it": "^1.6.3",
     "google-play-scraper": "^8.1.0",
+    "google-tts-api": "^2.0.2",
     "imdb-api": "^4.4.1",
     "kitsu.js": "^2.0.0",
     "moment": "^2.29.3",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^6.3.4",
+    "mongoose": "^6.5.0",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.7",
     "node-opus": "^0.3.3",
@@ -52,6 +56,7 @@
     "opusscript": "0.0.8",
     "play-dl": "^1.9.5",
     "random-puppy": "^1.1.0",
+    "rhyme": "0.0.3",
     "shuffle-array": "^1.0.1",
     "spotify-url-info": "^3.1.2",
     "string-progressbar": "^1.0.4",
@@ -60,6 +65,6 @@
     "urban": "^0.3.4",
     "user-instagram": "^3.0.2",
     "weather-js": "^2.0.0",
-    "youtube-sr": "^4.1.17"
+    "youtube-sr": "^4.2.0"
   }
 }
